corrected anchor links so it navigates to different sections

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -29,6 +29,18 @@ body
     font-family: 'Lexend', sans-serif;
 }
 
+li a 
+{
+    color:white;
+    text-decoration: none;
+}
+
+li a:hover
+{
+    background-color: white;
+    color:black;
+}
+
 .mainContainer
 {
     display: flex;
