--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -29,6 +29,17 @@ body
     font-family: 'Lexend', sans-serif;
 }
 
+.bg
+{
+    height: 300px;
+    width:100%;
+    background: url("../images/pexels-alex-conchillos-3941855.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    
+}
+
 li a 
 {
     color:white;
@@ -46,14 +57,12 @@ li a:hover
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-top: 80px;
+    width:100%;
     height: 100vh;
-    border: 3px solid red;
 }
 
 h1
 {
-    border-right: 3px solid blue;
     text-align: right;
     margin-right: 80px;
     padding: 0px 0px 0px 40px;
@@ -63,12 +72,7 @@ h1
 #About, #Work, #Contact
 {
     display:flex;
-    border: 3px solid black;
     padding: 10px;
-    width: 100%;
-}
-.sectionInfo
-{
-    border-left: 2px solid blue;
+    width: 80%;
 }
 
