--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -82,7 +82,7 @@ h1
 {
     display:flex;
     flex-direction: column;
-    width: 1000px; 
+    width: 100%; 
     
 }
 
@@ -206,4 +206,63 @@ a#pro5:hover
     text-decoration: none;
     color: darkblue;
     background-color: beige;
+}
+
+
+@media only screen and (max-width:480px)
+{
+ .navContainer {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+ }
+
+ .linkContainer
+ {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    width: 100%;
+ }
+
+ #About, #Work, #Contact
+ {
+     display: flex;
+     flex-direction: column;
+     align-self: center;
+ }
+
+ #About h1, #Work h1, #Contact h1
+ {
+     width: 100%;
+     text-align: center;
+     margin-bottom: 40px;
+     padding: 0;
+ }
+
+ 
+
+ .smallImg, .smallImg2
+ {
+    flex-direction: column;
+ }
+
+ .contactInfo
+ {
+     flex-direction: column;
+     margin: 0;
+ }
+
+ .contactInfo li
+ {
+     align-self: center;
+     line-height: 50px;
+ }
+
+}
+
+@media only screen and (max-width:768px)
+{
+
 }
