added new project with screenshot

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -130,11 +130,12 @@ a#pro4{
     background-position: center;
     height: 200px;
     
+
 }
 
 a#pro5{
     display:block;
-    background-image: url('../images/pexels-luis-rosero-5679568.jpg');
+    background-image: url('../images/waterXchange.png');
     background-size: cover;
     background-position: center;
     height: 200px;
